Change project name. Change the name of backend application in docker-compose.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
     networks:
       - app-network
 
-  app:
+  backend:
     build:
       context: server
     container_name: expenses-server
